--- a/src/widgets/learn-more/learn-more.scss
+++ b/src/widgets/learn-more/learn-more.scss
@@ -33,7 +33,7 @@
     }
     @include lg{
       height: 723px;
-      margin: 32px 0 40px;
+      margin-top: 32px;
     }
   }
   &__card{
